# SEMParticleAnalyser

./: README.md  launcher.py  pyproject.toml
.github/workflows/: build.yml
samples/: blobs.tif  granular.tif
script/: sem_psd_addons.py  sem_psd_blobs.py  sem_psd_core.py  sem_psd_gui.py  sem_psd_hough.py
sem_psd/addons/: __init__.py  bootstrap.py  csv_ext.py  enrich.py  geometry.py  iso_stats.py  metrics.py  scale_tilt.py
sem_psd/core/: __init__.py  io_utils.py  log_detect.py  measure.py  morphology.py  params.py  roi_preprocess.py
sem_psd/gui/: app.py  image_view.py  main_window.py  mpl_widget.py  styles.py  utils.py  worker.py
tests/: conftest.py  test_export_and_enrich.py  test_io_and_meta.py  test_iso_and_bootstrap.py  test_log_detect.py  test_measurement.py  test_morphology_and_split.py  test_preprocess_threshold.py  test_scale_tilt.py
